# house_tweet_linguistics

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: defaults.json
docs/: data_management.md  methodology.md
metadata/: accounts.csv  corpus_variants.csv  handle_repair_candidates.csv  inclusion_report_extended_balanced.csv  inclusion_report_extended_full.csv  inclusion_report_strict_balanced.csv  inclusion_report_strict_full.csv
reports/: integrated_final_report.md  requirements_coverage.md
scripts/: run_full_pipeline.ps1
src/house_tweet_linguistics/: accounts.py  analyze.py  audit.py  cli.py  collect.py  config.py  import_sources.py  mirrors.py  socialdata_api.py  style.py  text.py  topic.py  x_api.py
